force-app/main/default/objects/Account_Question_Answer__c/Account_Question_Answer__c.object-meta.xml
<CustomObject>
    <description>This is a junction object between account and questions</description>
    <label>Account Question Answer</label>
    <nameField>
        <displayFormat>QA-{00000}</displayFormat>
        <label>Account Question Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Question Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>