force-app/main/default/objects/Account_Question_Answer__c/fields/AccountIdandQuestionId__c.field-meta.xml
<CustomField>
    <fullName>AccountIdandQuestionId__c</fullName>
    <externalId>true</externalId>
    <label>AccountId and QuestionId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>