force-app/main/default/objects/Account_Question_Answer__c/fields/Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Name__c</fullName>
    <formula>Form__r.Form_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Name</label>
    <type>Text</type>
</CustomField>