force-app/main/default/objects/Account_Question_Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Account Question Answers</relationshipLabel>
    <relationshipName>Account_Question_Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>